@@ -68,7 +68,7 @@ mxData <- function(observed, type, means = NA, numObs = NA) {
 		verifyCovarianceMatrix(observed)
 	}
 	numObs <- as.numeric(numObs)
-	lapply(dimnames(observed)[[2]], omxVerifyName)
+	lapply(dimnames(observed)[[2]], omxVerifyName, -1)
 	means <- as.matrix(means)
 	dim(means) <- c(1, length(means))
 	return(new("MxNonNullData", observed, means, type, numObs))
